<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/cp2"
    android:orientation="vertical"
    tools:context=".Screen2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp"
        android:background="#FFFFFF"
        android:baselineAligned="false"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:text="@string/registration"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/comp_text9"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_margin="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/comp_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/user"
            android:inputType="text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/comp_passw9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:backgroundTint="#88cc7e"
            android:text="@string/save"
            android:textColorHighlight="#88CC7E"
            android:textColorLink="#88cc7e"
            android:textSize="20sp" />


    </LinearLayout>
</LinearLayout>
